[package]
name = "clarinet-sdk-wasm"
version.workspace = true
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/hirosystems/clarinet"
description = "The core lib that powers @hirosystems/clarinet-sdk"

[lib]
crate-type = ["cdylib"]
name = "clarinet_sdk"
path = "src/lib.rs"

[dependencies]
console_error_panic_hook = { version = "0.1" }
gloo-utils = { version = "0.2.0", features = ["serde"] }
js-sys = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.6.4" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console"] }

clarinet-files = { path = "../clarinet-files", default-features = false }
clarity-repl = { path = "../clarity-repl", default-features = false }
clarinet-deployments = { path = "../clarinet-deployments", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
clarity = { workspace = true }

[features]
web = [
  "clarity-repl/web",
]

# DEV
[profile.dev]
inherits = "release"
opt-level = 3
debug = false
debug-assertions = false
incremental = false
codegen-units = 256

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

# RELEASE
[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
lto = true
incremental = false
codegen-units = 16

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

# profiling
[profile.profiling]
debug = 1

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-g', '-O']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
