[package]
name = "clarinet-utils"
version = "1.0.0"
description = "Clarinet helpers"
license = "MIT"
edition = "2021"

[dependencies]
hmac = "0.12.0"
pbkdf2 = { version = "0.11.0", features = ["simple"], default-features = false }
sha2 = "0.10.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "clarinet_utils"
path = "src/lib.rs"
