[package]
name = "clarity-events"
version.workspace = true
edition = "2021"

[dependencies]
clarinet-files = { path = "../clarinet-files", default-features = false }
clarity-repl = { path = "../clarity-repl", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_derive = { workspace = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.4.8", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "clarity_events"
path = "src/lib.rs"

[[bin]]
name = "clarity-events"
path = "src/bin.rs"
