[package]
name = "clarity-lsp"
version.workspace = true
edition = "2021"

[dependencies]
lsp-types = "0.94.0"
regex = "1.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
clarinet-files = { path = "../clarinet-files", default-features = false }
clarinet-format = { path = "../clarinet-format", default-features = false }
clarity-repl = { path = "../clarity-repl", default-features = false, optional = true }
clarinet-deployments = { path = "../clarinet-deployments", default-features = false }

# WASM
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6.4", optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["console"], optional = true }

[features]
default = ["cli"]
cli = [
  "clarinet-deployments/cli",
  "clarinet-deployments/cli",
  "clarity-repl/cli",
  "clarinet-files/cli",
]
wasm = [
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "serde-wasm-bindgen",
  "js-sys",
  "web-sys",
  "console_error_panic_hook",
  "clarinet-deployments/wasm",
  "clarity-repl/wasm",
  "clarity-repl/web",
  "clarinet-files/wasm",
]

[lib]
crate-type = ["cdylib", "rlib"]
name = "clarity_lsp"
path = "src/lib.rs"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O1']

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release]
# -04  aggressively optimizes for speed
wasm-opt = ['-O4']
# -0z aggressively optimizes for size
# wasm-opt = ['-Oz']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
