[package]
name = "clarity-repl"
version.workspace = true
description = "Clarity REPL"
authors = [
    "Ludo Galabru <ludo@hiro.so>",
    "Brice Dobry <brice@hiro.so>",
    "Reed Rosenbluth <reed@hiro.so>",
    "Hugo Caillard <hugo@hiro.so>",
]
readme = "README.md"
edition = "2018"
license = "GPL-3.0-only"
keywords = ["stacks", "blockchain", "clarity", "smart-contract", "repl"]
exclude = ["vs-client/**", ".husky", ".git*"]
homepage = "https://hirosystems.github.io/clarity-repl/"
repository = "https://github.com/hirosystems/clarity-repl"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]

[dependencies]
ansi_term = "0.12.1" # to be replaced with colored in the future
chrono = "0.4.31"
colored = "2.1.0"
lazy_static = { workspace = true }
regex = "1.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.47", features = ["unbounded_depth"] }
sha2 = "0.10"
serde_derive = "1.0"
getrandom = { version = "0.2.3", features = ["js"] }
atty = "0.2.14"
clarity = { workspace = true }
clar2wasm = { git = "https://github.com/stacks-network/clarity-wasm.git", branch = "main", optional = true }
pox-locking = { git = "https://github.com/stacks-network/stacks-core.git", branch="feat/clarity-wasm-develop", optional = true, default-features = false }
prettytable-rs = { version = "0.10.0" }

# wasm
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { version = "0.6.4", optional = true }
web-sys = { workspace = true, optional = true, features = ["XmlHttpRequest"]}
js-sys = { version = "0.3", optional = true }

# DAP Debugger
tokio = { version = "1.35.1", features = ["full"], optional = true}
tokio-util = { version = "0.7.10", features = ["codec"], optional = true }
futures = { version = "0.3.12", optional = true }
debug_types = { version = "1.0.0", optional = true }
httparse = { version = "1.6.0", optional = true }
bytes = { version = "1.1.0", optional = true }
log = { version = "0.4.16", optional = true }
memchr = { version = "2.4.1", optional = true }

# CLI
pico-args = { version = "0.5.0", optional = true }
rustyline = { version = "14.0.0", optional = true }
hiro_system_kit = { version = "0.1.0", package = "hiro-system-kit", path = "../hiro-system-kit", default-features = false }
reqwest = { workspace = true, features = ["blocking"] }

[dev-dependencies]
test-case = "*"
divan = "0.1"
mockito = "1.6"

[lib]
name = "clarity_repl"
path = "src/lib.rs"

[[bin]]
name = "clarity-repl"
path = "src/bin.rs"

[[bench]]
name = "simnet"
harness = false

[features]
default = ["cli", "dap", "remote-data-fetching"]
remote-data-fetching = []
sdk = [
    "clarity/canonical",
    "clarity/developer-mode",
    "clarity/devtools",
    "clarity/log",
    "hiro_system_kit/tokio_helpers",
    "pox-locking/default",
]
cli = [
    "sdk",
    "pico-args",
    "rustyline",
    "clar2wasm",
]
dap = [
    "tokio",
    "tokio-util",
    "futures",
    "debug_types",
    "httparse",
    "bytes",
    "memchr",
    "log",
]
wasm = [
    "clarity/wasm",
    "clarity/developer-mode",
    "clarity/devtools",
    "pox-locking/wasm",
    "wasm-bindgen",
    "serde-wasm-bindgen",
    "web-sys",
    "js-sys",
]
