[package]
name = "hiro-system-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
tokio = { version = "=1.17.0", optional = true }
ansi_term = "0.12.1"
atty = "0.2.14"

[features]
default = ["tokio_helpers"]
tokio_helpers = ["tokio/full"]