[package]
name = "hiro-system-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
tokio = { version = "=1.17.0", optional = true }
ansi_term = "0.12.1"
atty = "0.2.14"
lazy_static = "1.4.0"
slog = { version = "2.7.0", optional = true  }
slog-json = { version = "2.6.1", optional = true }
slog-scope = { version = "4.4.0", optional = true } 
slog-term = { version = "2.9.0", optional = true } 
slog-async = { version = "2.7.0", optional = true } 
slog-atomic = { version = "3.1.0", optional = true } 

[features]
default = ["tokio_helpers"]
tokio_helpers = ["tokio/full"]
log = ["slog", "slog-json", "slog-scope", "slog-term", "slog-async", "slog-atomic"]
debug = ["log", "slog/max_level_trace", "slog/release_max_level_debug"]
release = ["log", "slog/max_level_info", "slog/release_max_level_info"]