[package]
name = "hiro-system-kit"
version = "0.3.5"
description = "Hiro system kit library"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = { workspace = true }
tokio = { workspace = true, optional = true }
slog = { version = "2.7.0", optional = true }
slog-json = { version = "2.6.1", optional = true }
slog-scope = { version = "4.4.0", optional = true }
slog-term = { version = "2.9.1", optional = true }
slog-async = { version = "2.7.0", optional = true }
slog-atomic = { version = "3.1.0", optional = true }
time = "0.3.36"

[features]
default = ["tokio_helpers"]
tokio_helpers = ["tokio/full"]
log = [
  "slog",
  "slog-json",
  "slog-scope",
  "slog-term",
  "slog-async",
  "slog-atomic",
]
debug = ["log", "slog/max_level_trace", "slog/release_max_level_debug"]
release = ["log", "slog/max_level_info", "slog/release_max_level_info"]
release_debug = ["log", "slog/max_level_trace", "slog/release_max_level_debug"]
full_log_level_prefix = []
