[package]
name = "clarity-jupyter-kernel"
description = "Jupyter kernel for Clarity"
version = "0.4.0"
authors = ["Ludo Galabru <ludovic@galabru.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["blockchain", "clarity", "smart-contract", "jupyter", "notebook"]
repository = "https://github.com/lgalabru/clarity-jupyter-kernel"
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[dependencies]
clarity-repl = "0.3.0"
lazy_static = "1.4.0"
regex = "1.3.4"
sha2 = "0.8.1"
sha3 = "0.8.2"
ripemd160 = "0.8.0"
json = { version = "0.11.15" } # should use serde_json instead
failure = { version = "0.1.5", default-features = false, features = [ "std" ] }
zmq = { version = "0.9.1", default-features = false }
uuid = { version = "0.7.4", features = [ "v4" ] }
hmac = { version = "0.7.1" }
hex = { version = "0.3.2" }
colored = { version = "1.8.0" } # should use ansi_term instead
dirs = { version = "2.0.2" }
chrono = { version = "0.4.7" }
