[package]
name = "stacks-codec"
version.workspace = true
edition = "2021"
license = "GPL-3.0"
description = "Stack wire format implementation"

[dependencies]
clarity = { workspace = true, features = ["developer-mode", "log"] }
stacks-common = { workspace = true, features = ["vrf"] }

serde = { version = "1", features = ["derive"] }
