[package]
name = "stacks-codec"
version.workspace = true
edition = "2021"
license = "GPL-3.0"
description = "Stack wire format implementation"

[dependencies]
clarity = { workspace = true, default-features = false, features = ["developer-mode"] }
stacks-common = { workspace = true, default-features = false }

serde = { version = "1", features = ["derive"] }
