[package]
name = "stacks-codec"
version = "3.3.0"
edition = "2021"
license = "GPL-3.0"
description = "Stack wire format implementation (compatibility layer for stackslib)"

[dependencies]
stackslib = { workspace = true }
clarity = { workspace = true }
stacks-common = { workspace = true }
serde = { version = "1", features = ["derive"] }
