[package]
name = "stacks-devnet-js"
version = "1.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
error-chain = "0.12"
chainhook_types = { package = "chainhook-types", path = "../chainhook-types-rs" }
clarinet_files = { package = "clarinet-files", path = "../clarinet-files" }
clarinet_utils = { package = "clarinet-utils", path = "../clarinet-utils" }
clarinet_deployments = { package = "clarinet-deployments", path = "../clarinet-deployments" }
stacks_network = { package = "stacks-network", path = "../stacks-network" }
hiro_system_kit = { package = "hiro-system-kit", path = "../hiro-system-kit" }

[dependencies.neon]
version = "0.9.1"
default-features = false
features = ["napi-4", "channel-api", "event-queue-api", "try-catch-api"]

[dependencies.num]
version = "0.2"
default-features = false
