[package]
name = "stacks-devnet-js"
version = "1.6.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
error-chain = "0.12"
clarinet-files = { path = "../clarinet-files" }
clarinet-utils = { path = "../clarinet-utils" }
clarinet-deployments = { path = "../clarinet-deployments" }
stacks-network = { path = "../stacks-network" }
hiro-system-kit = { path = "../hiro-system-kit" }
crossbeam-channel = "0.5.6"

[dependencies.neon]
version = "0.9.1"
default-features = false
features = ["napi-4", "channel-api", "event-queue-api", "try-catch-api"]

[dependencies.num]
version = "0.2"
default-features = false
