[package]
name = "stacks-devnet-js"
version.workspace = true
edition = "2018"
license = "ISC"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
error-chain = "0.12"
clarinet-files = { path = "../clarinet-files" }
clarinet-deployments = { path = "../clarinet-deployments" }
clarinet-utils = { path = "../clarinet-utils" }
stacks-network = { path = "../stacks-network" }
hiro-system-kit = { path = "../hiro-system-kit" }

[dependencies.neon]
version = "0.9.1"
default-features = false
features = ["napi-4", "channel-api", "event-queue-api", "try-catch-api"]

[dependencies.num]
version = "0.2"
default-features = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(has_error_description_deprecated)'] }
