[package]
name = "stacks-rpc-client"
version.workspace = true
description = "HTTP Client for the Stacks blockchain"
license = "GPL-3.0"
edition = "2021"

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
reqwest = { workspace = true, features = ["blocking"] }
libsecp256k1 = { version = "0.7.0" }

clarity = { workspace = true }
clarinet-utils = { path = "../clarinet-utils" }
stacks-codec = { package = "stacks-codec", path = "../stacks-codec" }

# enable mock stacks rpc for tests
mockito = { version = "1.6", default-features = false, optional = true }

[features]
mock = ["mockito"]
