[package]
name = "ts-to-clar"
version.workspace = true
edition = "2021"
description = "Transpile TypeScript to Clarity."
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.98"

oxc_allocator = "0.73"
oxc_ast = { version = "0.73", features = ["serialize"] }
oxc_ast_visit = "0.73"
oxc_parser = "0.73"
oxc_span = "0.73"
oxc_syntax = "0.73"
oxc_traverse = "0.73"
oxc_semantic = "0.73"

clarity = { workspace = true }

clarinet-format = { path = "../clarinet-format" }

[dev-dependencies]
indoc = "2.0.6"
pretty_assertions = "1.4"

[lib]
name = "ts_to_clar"
path = "src/lib.rs"
